--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -1,6 +1,3 @@
-/* CLEAN THIS STUFF UP */
-/* ADD MORE TO POPOUT */
-
 nav.desktop {
 	display: flex;
 }
@@ -50,7 +47,9 @@ nav.container.mobile {
 #popout {
 	position: fixed;
 	top: 0;
-	left: 0;
+	right: 0;
+
+	direction: rtl;
 
 	background-color: var(--card-background-color);
 	box-shadow: var(--card-box-shadow);
@@ -59,11 +58,11 @@ nav.container.mobile {
 	width: 50vw;
 	display: block;
 
-	transition: left 0.3s ease-in-out;
+	transition: right 0.3s ease-in-out;
 }
 
 #popout.hide {
-	left: -50vw; /* must match width */
+	right: -50vw; /* must match width */
 }
 
 .offset {
