--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
 		></script>
 
 		<!-- JQuery -->
-		<script src="{{url_for('static', filename='jquery/jquery-3.3.1.js')}}"></script>
+		<script src="{{url_for('static', filename='js/jquery-3.3.1.js')}}"></script>
 	</head>
 	<body>
 		<!-- Navbar -->
