--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,45 +1,3 @@
-<script>
-	$(document).ready(function () {
-		// Open on #hamburger click
-		$("#hamburger").click(function (event) {
-			if ($("#popout").hasClass("hide")) {
-				$("#popout").removeClass("hide");
-				event.stopPropagation();
-			}
-		});
-		// Close on external click
-		$(document).click(function (event) {
-			// .closest function returns array with jQuery object of closest #popout
-			if (
-				!$(event.target).closest("#popout").length &&
-				!$("#popout").hasClass("hide")
-			) {
-				$("#popout").addClass("hide");
-			}
-		});
-		// Hide on scroll-down, show on scroll-up
-		var oldScroll = $(window).scrollTop();
-		$(window).on("scroll", function () {
-			var newScroll = $(window).scrollTop();
-			// Scrolling down - hide
-			if (newScroll > oldScroll) {
-				// Desktop
-				if ($(window).width() > 575) {
-					$("#desktop-scroll").css("top", $("#desktop-scroll").height() * -1);
-				}
-				// Mobile
-				else {
-					$("#mobile-scroll").css("top", $("#mobile-scroll").height() * -1);
-				}
-			}
-			// Scrolling up - show
-			else {
-				$("#desktop-scroll, #mobile-scroll").css("top", 0);
-			}
-			oldScroll = newScroll;
-		});
-	});
-</script>
 <!-- Desktop -->
 <!-- 100vw for appropriate border position -->
 <div class="container-fluid desktop" id="desktop-scroll">
@@ -61,7 +19,7 @@
 	</ul>
 	<ul>
 		<li>
-			<a id="hamburger" href="#" class="secondary">
+			<a id="hamburger-bars" href="#" class="secondary">
 				<i class="fa-solid fa-bars fa-lg" style="color: var(--secondary)"></i
 			></a>
 		</li>
@@ -73,7 +31,12 @@
 		<nav>
 			<ul>
 				<li>
-					<img src="{{url_for('static', filename='images/favicon.png')}}" />
+					<a id="hamburger-x" href="#" class="secondary">
+						<i
+							class="fa-solid fa-xmark fa-xl"
+							style="color: var(--secondary)"
+						></i
+					></a>
 				</li>
 			</ul>
 		</nav>
@@ -91,3 +54,5 @@
 		<li><a href="#">fake text</a></li>
 	</ul>
 </nav>
+
+<script src="{{url_for('static', filename='js/navbar.js')}}"></script>
