--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -65,6 +65,10 @@ nav.container.mobile {
 	right: -50vw; /* must match width */
 }
 
+#popout nav {
+	padding-right: 3vw;
+}
+
 .offset {
 	visibility: hidden;
 }
