research design ideation

--- a/templates/design.html
+++ b/templates/design.html
@@ -2,4 +2,10 @@
 styles %}<link
 	rel="stylesheet"
 	href="{{url_for('static', filename='css/design.css')}}"
-/>{% endblock %} {% block content %} {% endblock %}
+/>{% endblock %} {% block content %} 
+
+
+
+
+
+{% endblock %}
