--- a/templates/research.html
+++ b/templates/research.html
@@ -4,4 +4,37 @@ styles %}<link
 	href="{{url_for('static', filename='css/research.css')}}"
 />{% endblock %} {% block content %}
 
+<header class="container">
+	<!-- Research interests -->
+</header>
+
+<main class="container">
+	<div class="row">
+		<div class="col-sm-7">
+			<hgroup>
+				<h3>Research Project Title</h3>
+				<h4>Start Date - End Date</h4>
+			</hgroup>
+			<!-- 
+			<div class="themes">
+				<small>Theme1</small>
+				<small>Theme2</small>
+				<small>Theme3</small>
+			</div>
+			-->
+			<p>
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio sint
+				deserunt incidunt veniam! Commodi rerum sed ratione natus? Iusto
+				aspernatur quis corrupti eligendi, laudantium tempora quod voluptates
+				facere eius nesciunt!
+			</p>
+			</details>
+			<a href="#" role="button" class="secondary">Paper Link</a>
+		</div>
+		<div class="col-sm-5">
+			<!-- Project images -->
+		</div>
+	</div>
+</main>
+
 {% endblock %}
