--- a/static/css/research.css
+++ b/static/css/research.css
@@ -1,24 +1,11 @@
-.date {
-    direction: rtl;
-    width: 100%;
-    display: inline-block;
-    
+.project-img {
+    box-shadow: var(--card-box-shadow);
+    border-radius: 0.25rem;
 }
 
-.themes {
-    display: flex;
-    gap: 1rem;
-}
-
-.themes small, .themes button {
-    width: fit-content;
-    display: inline-block;
-    color: var(--primary-inverse);
-
-    background-color: var(--secondary);
-    border-color: var(--secondary);
-
-    padding: .6rem 1rem;
-    border-radius: var(--border-radius);
-    margin-bottom: var(--spacing);
+@media (max-width: 575px) {
+    .project-img {
+        margin-top: 3rem;
+        max-height: 15rem;
+    }
 }
