--- a/templates/index.html
+++ b/templates/index.html
@@ -35,10 +35,7 @@ styles %}<link
 				<a href="https://luddy.indiana.edu/index.html">Luddy SICE</a>, Indiana
 				University Bloomington.
 			</p>
-			<p>
-				Prospective PhD applicant for HCI-centric programs which begin Fall
-				2024.
-			</p>
+			<p>Prospective applicant for HCI Ph.D. programs which begin Fall 2024.</p>
 			<div class="contact">
 				<a href="mailto: clefevr@iu.edu" class="contrast"
 					><i class="fa-solid fa-envelope fa-lg"></i
