--- a/templates/research.html
+++ b/templates/research.html
@@ -4,6 +4,7 @@ styles %}<link
 	href="{{url_for('static', filename='css/research.css')}}"
 />{% endblock %} {% block content %}
 
+<!-- 
 <header class="container">
 	<div class="row">
 		<div class="col-sm-6">
@@ -20,13 +21,14 @@ styles %}<link
 		</div>
 	</div>
 </header>
+-->
 
 <main class="container">
 	<div class="row">
 		<div class="col-sm-6">
 			<hgroup>
-				<h3>Research Project Title</h3>
-				<h4>Start Date - End Date</h4>
+				<h3>Technology Within Pro-Choice Abortion Activism</h3>
+				<h4>Fall 2022 - Present</h4>
 			</hgroup>
 			<p>
 				Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio sint
