--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@ styles %}<link
 
 <header class="container">
 	<div class="row">
-		<div class="col-sm-4">
+		<div class="col-lg-4">
 			<div class="pfp-container">
 				<img
 					class="pfp"
@@ -20,8 +20,8 @@ styles %}<link
 				</p>
 			</div>
 		</div>
-		<div class="col-sm-1"></div>
-		<div class="col-sm-6">
+		<div class="col-lg-1"></div>
+		<div class="col-lg-7">
 			<div>Hello! I am</div>
 			<hgroup>
 				<h2>Colin LeFevre</h2>
@@ -34,6 +34,11 @@ styles %}<link
 				>, and an Informatics undergraduate student at
 				<a href="https://luddy.indiana.edu/index.html">Luddy SICE</a>, Indiana
 				University Bloomington.
+			</p>
+			<p>
+				I conduct research at the intersection of HCI, Health, and Design. I am
+				particularly interested in social collaboration, marginalization, and
+				reinvention in health contexts.
 			</p>
 			<p>Prospective applicant for HCI Ph.D. programs which begin Fall 2024.</p>
 			<div class="contact">
