--- a/templates/nav_links.html
+++ b/templates/nav_links.html
@@ -22,7 +22,7 @@
 	</li>
 	<li>
 		<a
-			href="{{url_for('static', filename='files/CV.pdf')}}"
+			href="{{url_for('static', filename='files/CV_LeFevre_F23.pdf')}}"
 			target="_blank"
 			rel="noopener noreferrer"
 			class="secondary"
