--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@ styles %}<link
 				<img
 					class="pfp"
 					src="{{url_for('static', filename='images/headshot_square.jpg')}}"
+					alt="Colin LeFevre, wearing glasses and a short sleeved shirt, taking a selfie in a wooded area"
 				/>
 				<p>
 					<small
