--- a/templates/research.html
+++ b/templates/research.html
@@ -14,7 +14,7 @@ styles %}<link
 		</div>
 	</div>
 	<div class="row">
-		<img class="cover-img" src="{{url_for('static', filename='images/research.png')}}" alt="A somewhat uncanny AI-generated image of a qualitative researcher's tool">
+		<img class="cover-img" src="{{url_for('static', filename='images/research.png')}}" alt="A laptop, tablet , glasses, pens, and sticky notes on a white background. AI generated.">
 		<small>Caption: A somewhat uncanny AI-generated image of a qualitative researcher's tools</small>
 	</div>
 </header>
