--- a/templates/research.html
+++ b/templates/research.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block title %}Research{% endblock %} {% block
+{% extends 'base.html' %} {% block title %}Colin LeFevre - Research{% endblock %} {% block
 styles %}<link
 	rel="stylesheet"
 	href="{{url_for('static', filename='css/research.css')}}"
@@ -24,7 +24,7 @@ styles %}<link
 	<div>
 		<div class="row">
 			<div class="col-lg-8">
-				<h3>{{project["title"]}}</h3>
+				<h3 style="font-weight: 600;">{{project["title"]}}</h3>
 			</div>
 		</div>
 		<div class="row">
