updated research interests

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,11 +37,14 @@ styles %}<link
 				University Bloomington.
 			</p>
 			<p>
-				I conduct research at the intersection of HCI, Health, and Design. I am
-				particularly interested in social collaboration, marginalization, and
-				reinvention in health contexts.
+				My research focuses on designing sociotechnical systems which support
+				health and wellbeing. I am particularly interested in themes of
+				collaboration, marginalization, and mental health.
 			</p>
-			<p>Prospective applicant for HCI Ph.D. programs which begin Fall 2024.</p>
+			<p>
+				Currently a prospective applicant for HCI Ph.D. programs which begin
+				Fall 2024.
+			</p>
 			<div class="contact">
 				<a href="mailto: clefevr@iu.edu" class="contrast"
 					><i class="fa-solid fa-envelope fa-lg"></i
