--- a/templates/research.html
+++ b/templates/research.html
@@ -1,70 +1,40 @@
-{% extends 'base.html' %} {% block title %}Colin LeFevre - Research{% endblock %} {% block
+{% extends 'base.html' %} {% block title %}Research{% endblock %} {% block
 styles %}<link
 	rel="stylesheet"
 	href="{{url_for('static', filename='css/research.css')}}"
 />{% endblock %} {% block content %}
 
-<header class="container">
-	<div class="row">
-		<div class="col-lg-8">
-			<hgroup>
-				<h1>Research</h2>
-				<h3>My completed and ongoing research projects</h3>
-			</hgroup>
-		</div>
-	</div>
-	<div class="row">
-		<img class="cover-img" src="{{url_for('static', filename='images/research.png')}}" alt="A laptop, tablet , glasses, pens, and sticky notes on a white background. AI generated.">
-		<small>Caption: A somewhat uncanny AI-generated image of a qualitative researcher's tools</small>
-	</div>
-</header>
-
 <main class="container">
-	{% for project in project_data %}
-	<div>
-		<div class="row">
-			<div class="col-lg-8">
-				<h3 style="font-weight: 600;">{{project["title"]}}</h3>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-lg-5">
-				<article>
-					<ul>
-						{% for detail in project['details'] %}
-						<li {% if loop.index == (project['details']|length) %} 
-						style="margin-bottom: 0px;" 
-						{% endif %}>
-						<b>{{detail['title']}}:</b> {{detail['body']}}
-						</li>
-						{% endfor %}
-					</ul>
-				</article>
-			</div>
-			<div class="col-lg-1"></div>
-			<div class="col-lg-6">
-				{% for text in project["text"] %}
-				<p>{{text}}</p>
-				{% endfor %}
-				<div class="button-flex">
-					{% for button in project["buttons"] %}
-					<!-- Cant figure out url for for here-->
-					<a 
-						href="{{button['link']}}"
-						role="button"
-						class="secondary"
-						target="_blank"
-						rel="noopener noreferrer"
-						>{{button['title']}}</a
-					>
-					{% endfor %}
-				</div>
-			</div>
-		</div>
+	<div class="row">
+		<hgroup>
+			<h1>Research</h1>
+			<h3>My work within HCI, Health, and Design</h3>
+		</hgroup>
 	</div>
-	{% if loop.index != project_data|length %}
-	<div class="project-barrier"></div>
-	{% endif %}
-	{% endfor %}
+	<div class="row">
+		<img-flexbox>
+			<div>
+				<a href="/abortion_activism.html"
+					><img
+						src="{{url_for('static', filename='images/activism_styles.png')}}"
+				/></a>
+				<small>Technology & Abortion Activism</small>
+			</div>
+			<div>
+				<a href="/reflection_bereavement.html"
+					><img src="{{url_for('static', filename='images/gfg.png')}}"
+				/></a>
+				<small>Reflective Technology & Bereavement</small>
+			</div>
+			<div>
+				<a href="/cooking_experiences.html"
+					><img
+						src="{{url_for('static', filename='images/cooking_stories.png')}}"
+				/></a>
+				<small>Digitally Shared Cooking Experiences</small>
+			</div>
+		</img-flexbox>
+	</div>
 </main>
+
 {% endblock %}
