--- a/templates/research_project.html
+++ b/templates/research_project.html
@@ -8,7 +8,10 @@ styles %}<link
 	<div>
 		<div class="row">
 			<div class="col-lg-8">
-				<h3>{{project["title"]}}</h3>
+				<hgroup>
+					<h2>{{project["blurb"]}}</h2>
+					<h3>{{project["title"]}}</h3>
+				</hgroup>
 			</div>
 		</div>
 		<div class="row">
