--- a/templates/index.html
+++ b/templates/index.html
@@ -9,10 +9,16 @@ styles %}<link
 		<div class="col-lg-4">
 			<div class="pfp-container">
 				<img
-					class="pfp"
+					class="pfp desktop"
+					src="{{url_for('static', filename='images/headshot.jpg')}}"
+					alt="Colin LeFevre, wearing glasses and a short sleeved shirt, taking a selfie in a wooded area"
+				/>
+				<img
+					class="pfp mobile"
 					src="{{url_for('static', filename='images/headshot_square.jpg')}}"
 					alt="Colin LeFevre, wearing glasses and a short sleeved shirt, taking a selfie in a wooded area"
 				/>
+
 				<p>
 					<!-- 
 					<small
@@ -31,7 +37,7 @@ styles %}<link
 				<h3>(he/him)</h3>
 			</hgroup>
 			<p>
-				I am a Human-Computer Interaction (HCI) student researcher at
+				I am a Human-Computer Interaction (HCI) researcher at
 				<a href="https://prohealth.luddy.indiana.edu/"
 					>Proactive Health Informatics</a
 				>, and an Informatics undergraduate student at
@@ -39,13 +45,15 @@ styles %}<link
 				University Bloomington.
 			</p>
 			<p>
-				My research focuses on designing sociotechnical systems which support
-				health and wellbeing. I am particularly interested in themes of
-				collaboration, marginalization, and mental health.
+				My research focuses on how technology can navigate cultural, social and
+				personal factors to support health and wellbeing. I am especially
+				interested in themes of collaboration and marginalization, and the
+				contexts of mental health and health activism. I am currently advised by
+				<a href="https://people.ucsc.edu/~cfchung/">Dr. Christina Chung</a>.
 			</p>
 			<p>
-				Currently a prospective applicant for HCI Ph.D. programs which begin
-				Fall 2024.
+				Currently a prospective applicant for Human-Computer Interaction or
+				related Ph.D. programs which begin Fall 2024.
 			</p>
 			<div class="contact">
 				<a href="mailto: clefevr@iu.edu" class="contrast"
