--- a/templates/research_project.html
+++ b/templates/research_project.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block title %}Colin LeFevre - Research{% endblock %} {% block
+{% extends 'base.html' %} {% block title %}{{project["blurb"]}}{% endblock %} {% block
 styles %}<link
 	rel="stylesheet"
 	href="{{url_for('static', filename='css/research_project.css')}}"
